# ci-guard

./: .gitignore  README.md  SKILL.md  pyproject.toml
.ci-guard/: flaky-ledger.json
.github/workflows/: ci.yml  deliver.yml  release.yml
agents/: openai.yaml
assets/: flaky-quarantine-template.md
docs/: agents.md  architecture.md  github-actions.md  testing-boss-audit.md  troubleshooting.md  updating.md
references/: ci-providers.md  cost-controls.md  flaky-detection.md  heuristics.md  setup.md  wrapper-contract.md
scripts/: action_runner.py  bootstrap.py  ci_watch.py  classify_failure.py  config.py  flaky_ledger.py
src/ci_guard/: __init__.py  actions.py  classify.py  cli.py  config.py  gate.py  init.py  ledger.py  watch.py
src/ci_guard/_providers/: github.py
tests/: __init__.py  test_action_runner.py  test_bootstrap.py  test_ci_watch_loop.py  test_classify_failure.py  test_flaky_ledger.py  test_gate.py
tests/fixtures/logs/: branch_failure_pytest.txt  dependency_failure_npm.txt  infra_flake_runner.txt  test_flake_timeout.txt  unknown_generic.txt
