[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ci-guard"
version = "0.5.0"
description = "Guard CI from wasted minutes by classifying failures and maintaining a per-repo flaky-test ledger."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ci", "github-actions", "flaky-tests", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
]
urls = { Homepage = "https://github.com/Viniciuscarvalho/ci-guard", Issues = "https://github.com/Viniciuscarvalho/ci-guard/issues" }

[project.scripts]
ci-guard = "ci_guard.cli:main"

# Reserved for v1.1 plugin API — classifiers registered here extend RULES.
[project.entry-points."ci_guard.classifiers"]

[tool.hatch.build.targets.wheel]
packages = ["src/ci_guard"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "SKILL.md"]
